--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -41,7 +41,7 @@
                         <li><a href="#">退出登录</a></li>
                     </ul>
                 </li>
-                <li th:if="${session.user == null}"><a href="https://github.com/login/oauth/authorize?client_id=Iv1.337c4b8d02421b65&redirect_uri=http://localhost:8044/callback&scope=user&state=1">登录</a></li>
+                <li th:if="${session.user == null}"><a href="https://github.com/login/oauth/authorize?client_id=ddb68e78477cb86a46d1&redirect_uri=http://localhost:8044/callback&scope=user&state=1">登录</a></li>
 
             </ul>
         </div>
