--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown" th:if="${session.user != null}">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false" >aaa<span class="caret"></span></a>
+                       aria-expanded="false">aaa<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">消息中心</a></li>
                         <li><a href="#">个人资料</a></li>
@@ -41,7 +41,9 @@
                         <li><a href="#">退出登录</a></li>
                     </ul>
                 </li>
-                <li th:if="${session.user == null}"><a href="https://github.com/login/oauth/authorize?client_id=Iv1.337c4b8d02421b65&redirect_uri=http://localhost:8044/callback&scope=user&state=1">登录</a></li>
+                <li th:if="${session.user == null}"><a
+                        href="https://github.com/login/oauth/authorize?client_id=ddb68e78477cb86a46d1&redirect_uri=http://localhost:8044/callback&scope=user&state=1">登录</a>
+                </li>
 
             </ul>
         </div>
