success first level

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,17 +32,17 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown" th:if="${session.user != null}">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">aaa<span class="caret"></span></a>
+                       aria-expanded="false">
+                        <span th:text="${session.user.getName()}"></span>
+                        <span class="caret"></span>
+                    </a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">消息中心</a></li>
-                        <li><a href="#">个人资料</a></li>
-
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">退出登录</a></li>
+                        <li><a href="/profile/questions">我的问题</a></li>
+                        <li><a href="/logout">退出登录</a></li>
                     </ul>
                 </li>
-                <li th:if="${session.user == null}"><a
-                        href="https://github.com/login/oauth/authorize?client_id=ddb68e78477cb86a46d1&redirect_uri=http://localhost:8044/callback&scope=user&state=1">登录</a>
+                <li th:if="${session.user == null}">
+                    <a href="https://github.com/login/oauth/authorize?client_id=ddb68e78477cb86a46d1&redirect_uri=http://localhost:8044/callback&scope=user&state=1">登录</a>
                 </li>
 
             </ul>
