--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -25,9 +25,11 @@
             <hr>
 
             <form action="/publish" method="post">
+                <input type="hidden" name="id" th:value="${id}">
                 <div class="form-group">
                     <label for="title">问题标题（简明扼要）：</label>
-                    <input type="text" class="form-control" id="title" th:value="${title}" name="title" placeholder="问题标题--">
+                    <input type="text" class="form-control" id="title" th:value="${title}" name="title"
+                           placeholder="问题标题--">
                 </div>
                 <div class="form-group">
                     <label for="title">问题补充（必填，请参考右侧提示）：</label>
@@ -38,15 +40,18 @@
                 </div>
                 <div class="form-group">
                     <label for="title">添加标签：</label>
-                    <input type="text" class="form-control" id="tag" name="tag" th:value="${tag}" placeholder="输入标签，以，号分隔">
+                    <input type="text" class="form-control" id="tag" name="tag" th:value="${tag}"
+                           placeholder="输入标签，以，号分隔">
                 </div>
                 <div class="container-fluid main">
                     <div class="row">
-                        <div class="alert alert-danger col-lg-9 col-md-12 col-sm-12 col-xs-12" th:text="${error}" th:if="${error != null}">
-                            </div>
+                        <div class="alert alert-danger col-lg-9 col-md-12 col-sm-12 col-xs-12" th:text="${error}"
+                             th:if="${error != null}">
+                        </div>
                         <div>
                             <button type="submit" class="btn btn-success btn-publish">
-                                发布</button>
+                                发布
+                            </button>
                         </div>
                     </div>
                 </div>
